--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html>
-    <html lang="en"></html>
+<html lang="en">
     <head>
         <title>My Site Title</title>
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <link
+        <link rel="stylesheet" type="text/css" href="style.css"/>
   rel="stylesheet"
   href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
 />
@@ -14,4 +12,4 @@
 <link rel="stylesheet" type="text/css" href="typography.css" />
     </head>
     <body></body>
-</html>
+</html> 
